--- a/Diploma2/MainWindow.xaml
+++ b/Diploma2/MainWindow.xaml
@@ -24,7 +24,7 @@
         <Grid>
           <Grid.ColumnDefinitions>
             <ColumnDefinition Width='1*'></ColumnDefinition>
-            <ColumnDefinition Width='3*'></ColumnDefinition>
+            <ColumnDefinition Width='5*'></ColumnDefinition>
             <ColumnDefinition Width='2*'></ColumnDefinition>
           </Grid.ColumnDefinitions>
           <GridSplitter Grid.Column="0"
@@ -52,6 +52,10 @@
             <Button Content="Move Line"
                     Name="MoveLine"
                     Click="MoveLine_OnClick"
+                    Height="50"></Button>
+            <Button Content="Move Line BACK"
+                    Name="MoveLineBacj"
+                    Click="MoveLineBack_OnClick"
                     Height="50"></Button>
             <Button Content="generate tests"
                     Name="gentest"
@@ -119,8 +123,8 @@
                        Grid.Row="0">
             <ScrollViewer CanContentScroll="True" VerticalScrollBarVisibility="Visible" Height="550" HorizontalScrollBarVisibility="Visible">
             <Canvas x:Name="testcanvas"
-                    Height="500"
-                    Margin="150,600,0,0">
+                    Height="600"
+                    Margin="400,700,0,0">
               <!--RenderTransformOrigin="0,0"-->
               <Canvas.RenderTransform>
                 <!--<TransformGroup>-->
@@ -235,7 +239,7 @@
                          Foreground="White"
                          FontSize="30"></TextBlock>
               <DataGrid  x:Name="RoomGrid"
-                         ItemsSource="{Binding Rooms, IsAsync=True, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                         ItemsSource="{Binding Rooms, IsAsync=True, Mode=OneWay}"
                          HorizontalAlignment="Stretch"
                          Height="400"
                          AutoGenerateColumns="False"
